--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-redux": "^5.0.3",
+    "react-router": "^4.0.0",
     "react-sparklines": "^1.6.0",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3"
